--- a/index.html
+++ b/index.html
@@ -49,8 +49,53 @@
                 </ul>
             </header>
         </section>
-        <section class="main">
-            <div class="main__product"></div>
+        <section class="main__first">
+            <div class="first__product">
+                <div class="product__name">
+                    <h1>iPhone 11 Pro</h1>
+                </div>
+                <div class="product__description">
+                    <h4>Pro cameras. Pro display. Pro performance.</h4>
+                    <p>
+                        From twenty $28.29/mo. or $679 with trade in.
+                    </p>
+                </div>
+                <div class="product__links">
+                    <a href="#"><span>Learn more</span></a>
+                    <a href="#"><span>Buy</span></a>
+                </div>
+            </div>
+        </section>
+        <section class="main__second">
+            <div class="second__product">
+                <div class="product__name">
+                    <h1>iPhone 11</h1>
+                </div>
+                <div class="product__description">
+                    <h4>Just the right amount of everything</h4>
+                    <p>
+                        From twenty $18.70/mo. or $449 with trade in.
+                    </p>
+                </div>
+                <div class="product__links">
+                    <a href="#"><span>Learn more</span></a>
+                    <a href="#"><span>Buy</span></a>
+                </div>
+            </div>
+        </section>
+        <section class="main__third">
+            <div class="third__product">
+                <div class="product__name">
+                    <h1>iPad Pro</h1>
+                </div>
+                <div class="product__description">
+                    <h4>Your next computer is not a computer</h4>
+                </div>
+                <div class="product__links">
+                    <a href="#"><span>Learn more</span></a>
+                    <a href="#"><span>Buy</span></a>
+                </div>
+            </div>
         </section>
     </body>
 </html>
