--- a/index.html
+++ b/index.html
@@ -97,5 +97,26 @@
                 </div>
             </div>
         </section>
+        <section class="collections">
+            <div class="collections__first">
+                <div class="contents">
+                    <h2 class="title">Creativity goes on</h2>
+                    <a class="small" href="#"><span>Watch the film</span></a>
+                </div>
+            </div>
+            <div class="collections__second"></div>
+            <div class="collections__third">
+                <div class="contents">
+                    <h2 class="title">Trolls World Tour is here.</h2>
+                    <p>Watch the world premiere on the Apple TV app.</p>
+                    <div class="contents__link">
+                        <a class="small" href="#"><span>Available now</span></a>
+                    </div>
+                </div>
+            </div>
+            <div class="collections__fourth"></div>
+            <div class="collections__fifth"></div>
+            <div class="collections__sixth"></div>
+        </section>
     </body>
 </html>
