--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="product__links">
                     <a href="#"><span>Learn more</span></a>
-                    <a href="#"><span>Buy</span></a>
+                    <a class="big" href="#"><span>Buy</span></a>
                 </div>
             </div>
         </section>
@@ -79,7 +79,7 @@
                 </div>
                 <div class="product__links">
                     <a href="#"><span>Learn more</span></a>
-                    <a href="#"><span>Buy</span></a>
+                    <a class="big" href="#"><span>Buy</span></a>
                 </div>
             </div>
         </section>
@@ -93,7 +93,7 @@
                 </div>
                 <div class="product__links">
                     <a href="#"><span>Learn more</span></a>
-                    <a href="#"><span>Buy</span></a>
+                    <a class="big" href="#"><span>Buy</span></a>
                 </div>
             </div>
         </section>
@@ -101,22 +101,84 @@
             <div class="collections__first">
                 <div class="contents">
                     <h2 class="title">Creativity goes on</h2>
-                    <a class="small" href="#"><span>Watch the film</span></a>
-                </div>
-            </div>
-            <div class="collections__second"></div>
-            <div class="collections__third">
-                <div class="contents">
-                    <h2 class="title">Trolls World Tour is here.</h2>
-                    <p>Watch the world premiere on the Apple TV app.</p>
                     <div class="contents__link">
-                        <a class="small" href="#"><span>Available now</span></a>
+                        <a class="small" href="#"
+                            ><span>Watch the film</span></a
+                        >
                     </div>
                 </div>
             </div>
-            <div class="collections__fourth"></div>
-            <div class="collections__fifth"></div>
-            <div class="collections__sixth"></div>
+            <div class="collections__second">
+                <div class="contents">
+                    <h2 class="title">Today at Apple</h2>
+                    <div class="gradient__box">
+                        <p class="box__text">
+                            Fun how-to videos<br />
+                            to help you get<br />
+                            creative at home
+                        </p>
+                    </div>
+                    <div class="contents__link">
+                        <a class="small-arrow" href="#"
+                            ><span>Watch now</span></a
+                        >
+                    </div>
+                </div>
+            </div>
+            <div class="collections__third">
+                <div class="contents">
+                    <h2 class="title"><i class="fab fa-apple"></i>tv+</h2>
+                    <div class="contents__link">
+                        <a class="small" href="#"
+                            ><span>Watch now on the Apple TV app</span></a
+                        >
+                    </div>
+                </div>
+            </div>
+            <div class="collections__fourth">
+                <div class="contents">
+                    <h2 class="title"><i class="fab fa-apple"></i>Books</h2>
+                    <p>Enjoy great books for kids.</p>
+                    <p>Free for a limited time.</p>
+                    <div class="contents__link">
+                        <a class="small-arrow" href="#"
+                            ><span>Explore books now</span></a
+                        >
+                    </div>
+                </div>
+            </div>
+            <div class="collections__fifth">
+                <div class="contents">
+                    <img
+                        src="https://www.apple.com/v/home/d/images/logos/covid-19-app/logo__dcojfwkzna2q_large_2x.png"
+                        alt="Apple and CDC logo"
+                    />
+                    <h2 class="title">
+                        Evaluate COVID‑19 <br />
+                        symptoms and <br />
+                        understand next steps.
+                    </h2>
+                    <div class="contents__link">
+                        <a class="small-arrow" href="#"
+                            ><span>Get Started Now</span></a
+                        >
+                        <a class="small" href="#"><span>Watch the PSA</span></a>
+                    </div>
+                </div>
+            </div>
+            <div class="collections__sixth">
+                <div class="contents">
+                    <h2 class="title">MacBook Air</h2>
+                    <p>Twice the speed. Twice the storage.</p>
+                    <p class="price">Now from $999</p>
+                    <div class="contents__link">
+                        <a class="small-arrow" href="#"
+                            ><span>Learn more</span></a
+                        >
+                        <a class="small-arrow" href="#"><span>Buy</span></a>
+                    </div>
+                </div>
+            </div>
         </section>
     </body>
 </html>
