--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <title>Apple</title>
     </head>
     <body>
-        <section class="nav">
+        <section class="header">
             <header>
                 <ul>
                     <li>
@@ -177,6 +177,69 @@
                         >
                         <a class="small-arrow" href="#"><span>Buy</span></a>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section class="footer">
+            <div class="wrap">
+                <div class="explanations">
+                    <p>
+                        1. Trade In: Trade‑in values vary. iPhone 11 and iPhone
+                        11 Pro promotional pricing is after trade‑in of iPhone 8
+                        Plus and iPhone X in good condition. Additional trade‑in
+                        values require purchase of a new iPhone, subject to
+                        availability and limits. Must be at least 18. Apple or
+                        its trade-in partners reserve the right to refuse or
+                        limit any Trade In transaction for any reason. In‑store
+                        trade‑in requires presentation of a valid,
+                        government-issued photo ID (local law may require saving
+                        this information). Sales tax may be assessed on full
+                        value of new iPhone. Additional terms from Apple or
+                        Apple’s trade-in partners may apply. Monthly pricing:
+                        Available to qualified customers and requires 0% APR,
+                        24-month installment loan with Citizens One or Apple
+                        Card Monthly Installments and iPhone activation with
+                        AT&T, Sprint, T-Mobile, or Verizon. Taxes and shipping
+                        not included. Additional Apple Card Monthly Installments
+                        terms are in the Customer Agreement. Additional iPhone
+                        Payments terms are here.
+                    </p>
+                    <p>Magic Keyboard sold separately.</p>
+                    <p>
+                        The COVID‑19 site and app were developed in partnership
+                        with CDC. They are not meant as an endorsement of any
+                        Apple products.
+                    </p>
+                    <p>
+                        Apple TV+ is $4.99/month after free trial. One
+                        subscription per Family Sharing group. Offer good for 3
+                        months after eligible device activation. Plan
+                        automatically renews until cancelled. Restrictions and
+                        other terms apply.
+                    </p>
+                    <p>&copy; 2020 Sesame Workshop</p>
+                    <p>
+                        The COVID‑19 site and app were developed in partnership
+                        with CDC. They are not meant as an endorsement of any
+                        Apple products.
+                    </p>
+                </div>
+                <div class="nav">
+                    <div class="nav__column"></div>
+                    <div class="nav__column"></div>
+                    <div class="nav__column"></div>
+                    <div class="nav__column"></div>
+                    <div class="nav__column"></div>
+                </div>
+                <div class="etc">
+                    <div class="moreInfo">
+                        More ways to shop: Find an Apple Store or other retailer
+                        near you. Or call 1-800-MY-APPLE.
+                    </div>
+                    <div class="copyright">
+                        Copyright &copy; 2020 Apple Inc. All rights reserved.
+                    </div>
+                    <div class="links"></div>
                 </div>
             </div>
         </section>
