--- a/index.html
+++ b/index.html
@@ -225,15 +225,105 @@
                     </p>
                 </div>
                 <div class="nav">
-                    <div class="nav__column"></div>
-                    <div class="nav__column"></div>
-                    <div class="nav__column"></div>
-                    <div class="nav__column"></div>
-                    <div class="nav__column"></div>
+                    <div class="nav__column">
+                        <div class="nav__title">Shop and Learn</div>
+                        <ul>
+                            <li>Mac</li>
+                            <li>iPad</li>
+                            <li>iPhones</li>
+                            <li>Watch</li>
+                            <li>TV</li>
+                            <li>Music</li>
+                            <li>Airpods</li>
+                            <li>HomePad</li>
+                            <li>iPod touch</li>
+                            <li>Accessories</li>
+                            <li>Gift Card</li>
+                        </ul>
+                    </div>
+                    <div class="nav__column">
+                        <div class="nav__title">Services</div>
+                        <ul>
+                            <li>Apple Music</li>
+                            <li>Apple News+</li>
+                            <li>Apple TV+</li>
+                            <li>Apple Arcade</li>
+                            <li>Apple Card</li>
+                            <li>iCloud</li>
+                        </ul>
+                        <div class="nav__title">Account</div>
+                        <ul>
+                            <li>Manage Your Apple ID</li>
+                            <li>Apple Store Account</li>
+                            <li>iCloud.com</li>
+                        </ul>
+                    </div>
+                    <div class="nav__column">
+                        <div class="nav__title">Apple Store</div>
+                        <ul>
+                            <li>Find a Store</li>
+                            <li>Genius Bar</li>
+                            <li>Today at Apple</li>
+                            <li>Apple Camp</li>
+                            <li>Field Trip</li>
+                            <li>Apple Store App</li>
+                            <li>Refurbished and Clearance</li>
+                            <li>Financing</li>
+                            <li>Apple Trade In</li>
+                            <li>Order Status</li>
+                            <li>Shopping Help</li>
+                        </ul>
+                    </div>
+                    <div class="nav__column">
+                        <div class="nav__title">For Business</div>
+                        <ul>
+                            <li>Apple and Busiess</li>
+                            <li>Shop for Business</li>
+                        </ul>
+                        <div class="nav__title">For Education</div>
+                        <ul>
+                            <li>Apple and Education</li>
+                            <li>Show for K-12</li>
+                            <li>Show for college</li>
+                        </ul>
+                        <div class="nav__title">For Healthcare</div>
+                        <ul>
+                            <li>Apple in Healthcare</li>
+                            <li>Health on Apple Watch</li>
+                            <li>Health Records on iPhone</li>
+                        </ul>
+                        <div class="nav__title">For Government</div>
+                        <ul>
+                            <li>Shop for Government</li>
+                            <li>Shop for Veterans and Millitary</li>
+                        </ul>
+                    </div>
+                    <div class="nav__column">
+                        <div class="nav__title">Apple Values</div>
+                        <ul>
+                            <li>Accessibility</li>
+                            <li>Education</li>
+                            <li>Environment</li>
+                            <li>Inclusion and Diversity</li>
+                            <li>Privacy</li>
+                            <li>Supplier Responsibility</li>
+                        </ul>
+                        <div class="nav__title">About Values</div>
+                        <ul>
+                            <li>Newsroom</li>
+                            <li>Apple Leadership</li>
+                            <li>Job Opportunities</li>
+                            <li>Events</li>
+                            <li>Contact Apple</li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="etc">
                     <div class="moreInfo">
-                        More ways to shop: Find an Apple Store or other retailer
+                        More ways to shop:
+                        <a class="footerLink" href="#">Find an Apple Store</a>
+                        or
+                        <a class="footerLink" href="#">other retailer</a>
                         near you. Or call 1-800-MY-APPLE.
                     </div>
                     <div class="copyright">
